Test fix gh-pages overflow scrolling 2

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+html,
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -6,12 +7,26 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* overflow-y: scroll; */
-  overflow-y: clip;
-  overflow-x: hidden;
+  /* overflow-y: hidden;
+  overflow-x: hidden; */
+  height: 100%;
+  overflow: hidden;
+}
+
+body > #root {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: auto;
 }
 
 body > #root > div {
-  overflow-y: scroll;
+  /* position: absolute; */
+  /* overflow: auto; */
+  /* overflow-y: scroll; */
+  /* overflow-x: scroll; */
   margin-top: 56px;
   /* height: 100vh; */
   min-height: 100vh;
